--- a/public/services/src/app/views/ask/detail/detail.html
+++ b/public/services/src/app/views/ask/detail/detail.html
@@ -13,7 +13,7 @@
 		<img src="<%= ask_uploads.image_url %>" alt="原图">
 	</a>
 	<% }) %>
-	<div class="sectionFooter">
+	<div class="sectionFooter" id="askSectionFooter">
 		<a href="/services/download/index" class="workDesc"><%= ask.desc %></a>
 		<div class="footerBottom clearfix">
 			<span class="share">
@@ -92,7 +92,7 @@
 	<a href="/services/download/index" class="sectionContent">
 		<img src="<%= replies.image_url %>" alt="原图">
 	</a>
-	<div class="sectionFooter">
+	<div class="sectionFooter" id="replySectionFooter">
 		<a href="/services/download/index" class="workDesc"><%= replies.desc %></a>
 		<div class="footerBottom clearfix">
 			<span class="share">
