--- a/public/services/src/app/views/menu/menu.less
+++ b/public/services/src/app/views/menu/menu.less
@@ -1,3 +1,10 @@
+.menuMy-list-hide {
+    position: absolute;
+    top: -400%;
+    left: -200%;
+    height: 700%;
+    width: 400%;
+}
 .header-logo{
     width: 100%;
     height: 3.57rem;
