--- a/public/css/main.css
+++ b/public/css/main.css
@@ -173,6 +173,36 @@ input::-webkit-input-placeholder {
 .inner-container > div {
   height: 100%;
 }
+.comment-success {
+  position: fixed;
+  top: 0;
+  z-index: 10;
+  width: 100%;
+  padding: 0.36rem 0;
+  background-color: #000;
+  text-align: center;
+  opacity: 0.7;
+}
+.comment-success .success-icon {
+  display: inline-block;
+  width: 0.8rem;
+  height: 0.8rem;
+  margin-right: 0.5rem;
+  margin-top: 0.3rem;
+  background: url(http://7u2spr.com2.z0.glb.qiniucdn.com/movie/comment-success.png) 0 0 no-repeat;
+  background-size: contain;
+  vertical-align: top;
+  line-height: 1.07rem;
+}
+.comment-success span {
+  line-height: 1.07rem;
+  color: #fff;
+  font-size: 0.86rem;
+  vertical-align: top;
+}
+.toast-hide {
+  display: none !important;
+}
 /*End reset*/
 /*公用*/
 body {
@@ -418,6 +448,13 @@ body {
   box-shadow: none;
 }
 
+.menuMy-list-hide {
+  position: absolute;
+  top: -400%;
+  left: -200%;
+  height: 700%;
+  width: 400%;
+}
 .header-logo {
   width: 100%;
   height: 3.57rem;
