--- a/public/services/src/app/views/menu/menu.html
+++ b/public/services/src/app/views/menu/menu.html
@@ -15,7 +15,8 @@
 		<!-- <div class="menuBg"></div> -->
 		<i class="icon-My"></i>
 		<!-- <i class="icon-Ps"></i> -->
-		<ul class="menuMy-list hide">
+		<div class="menuMy-list hide">
+			<div class="menuMy-list-hide"></div>
 			<a href="#upload/ask" class="menuItem clearfix">
 				<i class="icon-menuItem icon-menuItem-hall"></i>
 				<span class="text-menuItem">求P</span>
@@ -32,7 +33,7 @@
 				<i class="icon-menuItem icon-menuItem-work"></i>
 				<span class="text-menuItem">我的作品</span>
 			</a > -->
-		</ul>
+		</div>
 	</li>
 <!-- 	<li class="menuPs">
 		<a href="#ask/index" class="icon-Ps"></a>
