--- a/public/services/src/less/common.less
+++ b/public/services/src/less/common.less
@@ -58,6 +58,36 @@ input::-webkit-input-placeholder {
 .inner-container>div {
     height: 100%;
 }
+.comment-success {
+    position: fixed;
+    top: 0;
+    z-index: 10;
+    width: 100%;
+    padding: 0.36rem 0;
+    background-color: #000;
+    text-align: center;
+    opacity: 0.7;
+    .success-icon {
+        display: inline-block;
+        width: 0.8rem;
+        height: 0.8rem;
+        margin-right: 0.5rem;
+        margin-top: 0.3rem;
+        background: url(http://7u2spr.com2.z0.glb.qiniucdn.com/movie/comment-success.png) 0 0 no-repeat;
+        background-size: contain;
+        vertical-align: top;
+        line-height: 1.07rem;
+    }
+    span {
+        line-height: 1.07rem;
+        color: #fff;
+        font-size: 0.86rem;
+        vertical-align: top;
+    }
+}
+.toast-hide {
+	display: none !important;
+}
 /*End reset*/
 
 /*公用*/
