--- a/public/services/src/app/views/ask/detail/ask-detail.less
+++ b/public/services/src/app/views/ask/detail/ask-detail.less
@@ -50,6 +50,10 @@
 		}
 		.userName{
 			float: left;
+			max-width: 11rem;;
+			height: 1.79rem;
+			line-height: 1.79rem;
+			overflow: hidden;
 			margin-left: 0.36rem;
 			margin-top: 5%;
 			font-size: 1rem;
@@ -59,6 +63,7 @@
 			margin-top: 5%;
 			margin-right: 3%;
 			font-size: 1rem;
+			line-height: 1.79rem;
 		}
 	}
 	.sectionContent{
@@ -79,8 +84,11 @@
 		border-bottom: 1px solid #eaeaea;
 		.workDesc{
 			display: block;
+			overflow: hidden;
+			max-height: 3.8rem;
 			margin-top: 0.71rem;
 			font-size: 1.07rem;
+			line-height: 1.3rem;
 			color: #000;
 		}
 		.footerBottom{
