--- a/public/css/main.css
+++ b/public/css/main.css
@@ -766,6 +766,10 @@ body {
 }
 .post-workShow .sectionHeader .userName {
   float: left;
+  max-width: 11rem;
+  height: 1.79rem;
+  line-height: 1.79rem;
+  overflow: hidden;
   margin-left: 0.36rem;
   margin-top: 5%;
   font-size: 1rem;
@@ -775,6 +779,7 @@ body {
   margin-top: 5%;
   margin-right: 3%;
   font-size: 1rem;
+  line-height: 1.79rem;
 }
 .post-workShow .sectionContent {
   overflow: hidden;
@@ -795,8 +800,11 @@ body {
 }
 .post-workShow .sectionFooter .workDesc {
   display: block;
+  overflow: hidden;
+  max-height: 3.8rem;
   margin-top: 0.71rem;
   font-size: 1.07rem;
+  line-height: 1.3rem;
   color: #000;
 }
 .post-workShow .sectionFooter .footerBottom {
@@ -1063,7 +1071,7 @@ body {
 .grid-item {
   float: left;
   width: 47%;
-  margin: 1.5%;
+  margin: 0 1.5% 3%;
 }
 .grid {
   position: relative;
@@ -1275,10 +1283,11 @@ body {
 }
 .hot-pageSection .workSection .workDesc {
   display: block;
-  box-sizing: border-box;
+  overflow: hidden;
+  max-height: 2rem;
   padding-top: 0.57rem;
   padding-left: 0.68rem;
-  height: 1.43rem;
+  line-height: 1rem;
   font-size: 0.71rem;
   color: #000;
   background-color: #fff;
@@ -1288,7 +1297,7 @@ body {
 }
 .hot-pageSection .workSection .workSectionFooter .footerWrapper {
   float: right;
-  padding: 1rem 0;
+  padding: 0.5rem 0;
 }
 .hot-pageSection .workSection .workSectionFooter .footerWrapper .like {
   float: left;
