--- a/public/services/src/app/views/hot/reply/reply.less
+++ b/public/services/src/app/views/hot/reply/reply.less
@@ -86,10 +86,11 @@
             }
             .workDesc{
                 display: block;
-                box-sizing: border-box;
+                overflow: hidden;
+                max-height: 2rem;
                 padding-top: 0.57rem;
                 padding-left: 0.68rem;
-                height: 1.43rem;
+                line-height: 1rem;
                 font-size: 0.71rem;
                 color: #000;
                 background-color: #fff;
@@ -98,7 +99,7 @@
                 background-color: #fff;
                 .footerWrapper{
                     float: right;
-                    padding: 1rem 0;
+                    padding: 0.5rem 0;
                     .like{
                         float: left;
                         line-height: 0.89rem;
