--- a/public/services/src/app/views/personal/processing/processing.html
+++ b/public/services/src/app/views/personal/processing/processing.html
@@ -21,16 +21,16 @@
 			<div class="content-main">
 				<a href="#ask/detail/<%= ask_id %>" class="main-text"><%= desc %></a>
 			</div>
-			<ul class="content-bottom clearfix">
-				<li class="download">
+			<div class="content-bottom clearfix">
+				<div class="download" data-type="<%= type %>" data-id="<%= ask_id%>">
 					<i class="icon-download"></i>
 					<span>下载原图</span>
-				</li>
-				<li class="upload">
+				</div>
+				<a href="#upload/reply" class="upload">
 					<i class="icon-upload"></i>
 					<span>上传作品</span>
-				</li>
-			</ul>
+				</a>
+			</div>
 		</div>
 	</div>
 </div>
