--- a/public/services/src/app/views/hot/reply/reply.html
+++ b/public/services/src/app/views/hot/reply/reply.html
@@ -5,7 +5,7 @@
 		</div>
 		<span class="nickname"><%= nickname %></span>
 	</a>
-	<a href="#ask/detail/<%= ask_id%>/<%= reply_id %>" class="workPic">
+	<a href="#detail/detail/<%= type %>/<%= reply_id %>" class="workPic">
 		<img src="<%= image_url %>" alt="作品">
 		<div class="origin">
 			<span class="tag">原图</span>
