--- a/public/services/src/app/views/personal/work/personal-work.less
+++ b/public/services/src/app/views/personal/work/personal-work.less
@@ -20,10 +20,10 @@
                 .desc{
                     overflow: hidden;
                     display: block;
-                    width: 100%;
+                    width: 94%;
                     max-height: 2.6rem;
                     line-height: 1.3rem;
-                    padding-left: 0.43rem;
+                    padding: 0 3%;
                     font-size: 0.71rem;
                     color: rgba(0,0,0,0.8);
                     border-bottom: 0.12rem dotted rgba(0,0,0,0.49);
