--- a/public/services/src/app/views/upload/reply/upload-reply.less
+++ b/public/services/src/app/views/upload/reply/upload-reply.less
@@ -21,7 +21,6 @@
 			display: inline-block;
 			vertical-align: middle;
 			font-size: 1rem;
-			font-family: "PingFangSC-Regular","sans-serif";
 			color: #000;
 			opacity: 0.8;
 		}
@@ -37,9 +36,9 @@
 		background-color: #ffe400;
 		color: #332D00;
 		font-size: 0.86rem;
-		font-family: "PingFangSC-Regular","sans-serif";
 		text-align: center;
 		cursor: pointer;
+		/*font-weight: bold;*/
 	}
 }
 .uploadContent{
@@ -115,7 +114,6 @@
 		}
 		.uploadText{
 			margin-left: 0.79rem;
-			font-family: "PingFangSC-Regular","sans-serif";
 			font-size: 1rem;
 			opacity: 0.2;
 		}
@@ -160,7 +158,6 @@
 		}
 		.uploadText{
 			margin-left: 0.79rem;
-			font-family: "PingFangSC-Regular","sans-serif";
 			font-size: 1rem;
 			opacity: 0.2;
 		}
