--- a/public/services/src/app/views/personal/processing/processing.html
+++ b/public/services/src/app/views/personal/processing/processing.html
@@ -22,10 +22,10 @@
 				<a href="#ask/detail/<%= ask_id %>" class="main-text"><%= desc %></a>
 			</div>
 			<div class="content-bottom clearfix">
-				<div class="download" data-type="<%= type %>" data-id="<%= ask_id%>">
+<!-- 				<div class="download" data-type="<%= type %>" data-id="<%= ask_id%>">
 					<i class="icon-download"></i>
 					<span>下载原图</span>
-				</div>
+				</div> -->
 				<a href="#upload/reply" class="upload">
 					<i class="icon-upload"></i>
 					<span>上传作品</span>
