--- a/public/services/src/app/views/ask/detail/detail.html
+++ b/public/services/src/app/views/ask/detail/detail.html
@@ -157,7 +157,7 @@
 		<i class="icon-help"></i>
 		帮P
 	</div>
-	<a href="#upload/reply" class="footerUpload">
+	<a href="#upload/reply/<%= ask.ask_id %>" class="footerUpload">
 		上传作品
 	</a>
 </div>
