--- a/public/css/main.css
+++ b/public/css/main.css
@@ -624,7 +624,7 @@ body {
   opacity: .89;
 }
 .menu .menuPs .menuMy-list .menuItem .icon-menuItem-hall {
-  background: url(/images/p.png) no-repeat center bottom;
+  background: url(/images/pp.png) no-repeat center bottom;
   background-size: contain;
 }
 .menu .menuPs .menuMy-list .menuItem .icon-menuItem-ask {
