--- a/public/services/src/app/views/menu/menu.less
+++ b/public/services/src/app/views/menu/menu.less
@@ -103,7 +103,7 @@
                     opacity: .89;
                 }
                 .icon-menuItem-hall{
-                    background:url(/images/p.png) no-repeat center bottom;
+                    background:url(/images/pp.png) no-repeat center bottom;
                     background-size: contain;
                 }
                 .icon-menuItem-ask{
