--- a/public/services/src/app/views/upload/reply/reply.html
+++ b/public/services/src/app/views/upload/reply/reply.html
@@ -3,7 +3,7 @@
 		<!-- <i class="icon-backPage"></i> -->
 		<span class="text-backPage">发布作品</span>
 	</div>
-	<input type="button" value="发布" class="confirm" id="fnSubmitDynamic">
+	<input type="button" value="发布" class="confirm-none" id="fnSubmitDynamic">
 </div>
 <div class="uploadContent">
 	<div class="uploadPic-none">
