--- a/public/services/src/app/views/upload/reply/upload-reply.less
+++ b/public/services/src/app/views/upload/reply/upload-reply.less
@@ -25,6 +25,21 @@
 			opacity: 0.8;
 		}
 	}
+	.confirm-none {
+		float: right;
+		width: 4.29rem;
+		height: 1.86rem;
+		margin-top: 1.04rem;
+		margin-right: 0.86rem;
+		border-radius: 0.93rem;
+		box-shadow: 0 0.07rem 0.36rem 0 rgba(225,228,9,0.5);
+		background-color: #888;
+		color: #332D00;
+		font-size: 0.86rem;
+		text-align: center;
+		cursor: pointer;
+		/*font-weight: bold;*/
+	}	
 	.confirm{
 		float: right;
 		width: 4.29rem;
