--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1738,6 +1738,21 @@ body {
   color: #000;
   opacity: 0.8;
 }
+.uploadHeader .confirm-none {
+  float: right;
+  width: 4.29rem;
+  height: 1.86rem;
+  margin-top: 1.04rem;
+  margin-right: 0.86rem;
+  border-radius: 0.93rem;
+  box-shadow: 0 0.07rem 0.36rem 0 rgba(225, 228, 9, 0.5);
+  background-color: #888;
+  color: #332D00;
+  font-size: 0.86rem;
+  text-align: center;
+  cursor: pointer;
+  /*font-weight: bold;*/
+}
 .uploadHeader .confirm {
   float: right;
   width: 4.29rem;
