--- a/public/services/src/app/views/personal/work/personal-work.less
+++ b/public/services/src/app/views/personal/work/personal-work.less
@@ -35,20 +35,24 @@
                 box-sizing:border-box;
                 padding: 0.64rem 0.64rem 0 0.75rem;
                 border-radius: 0.18rem;
+                line-height: 0.8rem;
                 overflow: hidden;
                 .help{
                     float: left;
                     .icon-help{
-                        float: left;
+                        display: inline-block;
                         margin-right: 0.68rem;
+                        vertical-align: middle;
                         width: 0.93rem;
                         height: 0.89rem;
                         background:url(/images/icon-help.png)no-repeat 0 0;
                         background-size: 100%;
                     }
                     .text-help{
-                        float: left;
+                        display: inline-block;
+                        vertical-align: middle;
                         font-size: 0.71rem;
+                        line-height: 0.89rem;
                         color: rgba(0,0,0,0.49);
                     }
                 }
