--- a/public/services/src/app/views/detail/detail.html
+++ b/public/services/src/app/views/detail/detail.html
@@ -1,9 +1,9 @@
 <div class="post-workShow artWorkShow">
 	<div class="sectionHeader clearfix">
-		<span class="avatar">
+		<a href="#personal/personal/<%= uid %>" class="avatar">
 			<img src="<%= avatar %>" alt="用户头像" class="userPortrait">
-		</span>
-		<span class="userName"><%= nickname %></span>
+		</a>
+		<a href="#personal/personal/<%= uid %>" class="userName"><%= nickname %></a>
 		<span class="pubdate">
 			<%= time(created_at) %>
 		</span>
