--- a/public/css/main.css
+++ b/public/css/main.css
@@ -448,6 +448,135 @@ body {
   box-shadow: none;
 }
 
+.post-workShow {
+  width: 100%;
+  border-bottom: 0.36rem solid #F7F7F7;
+}
+.post-workShow .sectionHeader {
+  display: block;
+  width: 100%;
+  height: 3.93rem;
+  border-bottom: 0.04rem solid #DDDDDD;
+  background-color: #fff;
+}
+.post-workShow .sectionHeader .avatar {
+  float: left;
+  height: 1.79rem;
+  width: 1.79rem;
+  margin-left: 3%;
+  margin-top: 4%;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.post-workShow .sectionHeader .userPortrait {
+  display: block;
+  width: 100%;
+}
+.post-workShow .sectionHeader .userName {
+  float: left;
+  max-width: 11rem;
+  height: 1.79rem;
+  line-height: 1.79rem;
+  overflow: hidden;
+  margin-left: 0.36rem;
+  margin-top: 5%;
+  font-size: 1rem;
+}
+.post-workShow .sectionHeader .pubdate {
+  float: right;
+  margin-top: 5%;
+  margin-right: 3%;
+  font-size: 0.8rem;
+  line-height: 1.79rem;
+  color: rgba(0, 0, 0, 0.3);
+}
+.post-workShow .sectionContent {
+  overflow: hidden;
+  display: block;
+  width: 100%;
+  max-height: 26.79rem;
+}
+.post-workShow .sectionContent img {
+  display: block;
+  width: 100%;
+}
+.post-workShow .sectionFooter {
+  width: 94%;
+  padding: 0 0 1.25rem;
+  margin: 0 auto;
+  box-sizing: border-box;
+  border-bottom: 1px solid #eaeaea;
+}
+.post-workShow .sectionFooter .workDesc {
+  display: block;
+  overflow: hidden;
+  max-height: 3.8rem;
+  margin-top: 0.71rem;
+  font-size: 1.07rem;
+  line-height: 1.3rem;
+  color: #000;
+}
+.post-workShow .sectionFooter .footerBottom {
+  margin-top: 1.46rem;
+  /*margin-right: 0.91rem;*/
+}
+.post-workShow .sectionFooter .footerBottom .share {
+  float: left;
+  width: 1.1rem;
+  height: 1.51rem;
+  background: url(/images/ic_share.png) no-repeat 0 center;
+  background-size: 100%;
+}
+.post-workShow .sectionFooter .footerBottom .ask-detail {
+  float: left;
+  margin-left: 2rem;
+  font-size: 0.86rem;
+  line-height: 1.51rem;
+}
+.post-workShow .sectionFooter .footerBottom .communicate {
+  float: right;
+  line-height: 1.51rem;
+}
+.post-workShow .sectionFooter .footerBottom .communicate .like-btn {
+  float: left;
+  cursor: pointer;
+}
+.post-workShow .sectionFooter .footerBottom .communicate .like-btn .icon-like-btn {
+  float: left;
+  width: 1.25rem;
+  height: 1.51rem;
+  background: url(/images/icon-like-deepCol.png) no-repeat 0 center;
+  background-size: 100%;
+}
+.post-workShow .sectionFooter .footerBottom .communicate .like-btn .text-like-btn {
+  float: left;
+  font-size: 0.86rem;
+  color: #656565;
+  margin-left: .5rem;
+}
+.post-workShow .sectionFooter .footerBottom .communicate .liked-icon .icon-like-btn {
+  background: url(/images/like.png) no-repeat 0 center;
+  background-size: 100%;
+}
+.post-workShow .sectionFooter .footerBottom .communicate .comment-btn {
+  float: left;
+  cursor: pointer;
+}
+.post-workShow .sectionFooter .footerBottom .communicate .comment-btn .icon-comment-btn {
+  float: left;
+  margin-left: 2.30rem;
+  width: 1.11rem;
+  height: 1.51rem;
+  background: url(/images/icon-comment-deepCol.png) no-repeat 0 center;
+  background-size: 100%;
+}
+.post-workShow .sectionFooter .footerBottom .communicate .comment-btn .text-comment-btn {
+  float: left;
+  font-size: 0.86rem;
+  color: #656565;
+  margin-left: .5rem;
+}
+
 .menuMy-list-hide {
   position: absolute;
   top: -400%;
@@ -740,133 +869,6 @@ body {
 .post-workCount .text-workCount em {
   vertical-align: top;
   font-size: 1.07rem;
-}
-.post-workShow {
-  width: 100%;
-  border-bottom: 0.36rem solid #F7F7F7;
-}
-.post-workShow .sectionHeader {
-  width: 100%;
-  height: 3.93rem;
-  border-bottom: 0.04rem solid #DDDDDD;
-  background-color: #fff;
-}
-.post-workShow .sectionHeader .avatar {
-  float: left;
-  height: 1.79rem;
-  width: 1.79rem;
-  margin-left: 3%;
-  margin-top: 4%;
-  border-radius: 50%;
-  overflow: hidden;
-}
-.post-workShow .sectionHeader .userPortrait {
-  display: block;
-  width: 100%;
-}
-.post-workShow .sectionHeader .userName {
-  float: left;
-  max-width: 11rem;
-  height: 1.79rem;
-  line-height: 1.79rem;
-  overflow: hidden;
-  margin-left: 0.36rem;
-  margin-top: 5%;
-  font-size: 1rem;
-}
-.post-workShow .sectionHeader .pubdate {
-  float: right;
-  margin-top: 5%;
-  margin-right: 3%;
-  font-size: 0.8rem;
-  line-height: 1.79rem;
-  color: rgba(0, 0, 0, 0.3);
-}
-.post-workShow .sectionContent {
-  overflow: hidden;
-  display: block;
-  width: 100%;
-  max-height: 26.79rem;
-}
-.post-workShow .sectionContent img {
-  display: block;
-  width: 100%;
-}
-.post-workShow .sectionFooter {
-  width: 94%;
-  padding: 0 0 1.25rem;
-  margin: 0 auto;
-  box-sizing: border-box;
-  border-bottom: 1px solid #eaeaea;
-}
-.post-workShow .sectionFooter .workDesc {
-  display: block;
-  overflow: hidden;
-  max-height: 3.8rem;
-  margin-top: 0.71rem;
-  font-size: 1.07rem;
-  line-height: 1.3rem;
-  color: #000;
-}
-.post-workShow .sectionFooter .footerBottom {
-  margin-top: 1.46rem;
-  /*margin-right: 0.91rem;*/
-}
-.post-workShow .sectionFooter .footerBottom .share {
-  float: left;
-  width: 1.1rem;
-  height: 1.51rem;
-  background: url(/images/ic_share.png) no-repeat 0 center;
-  background-size: 100%;
-}
-.post-workShow .sectionFooter .footerBottom .ask-detail {
-  float: left;
-  margin-left: 2rem;
-  font-size: 0.86rem;
-  line-height: 1.51rem;
-}
-.post-workShow .sectionFooter .footerBottom .communicate {
-  float: right;
-  line-height: 1.51rem;
-}
-.post-workShow .sectionFooter .footerBottom .communicate .like-btn {
-  float: left;
-  cursor: pointer;
-}
-.post-workShow .sectionFooter .footerBottom .communicate .like-btn .icon-like-btn {
-  float: left;
-  width: 1.25rem;
-  height: 1.51rem;
-  background: url(/images/icon-like-deepCol.png) no-repeat 0 center;
-  background-size: 100%;
-}
-.post-workShow .sectionFooter .footerBottom .communicate .like-btn .text-like-btn {
-  float: left;
-  font-size: 0.86rem;
-  color: #656565;
-  margin-left: .5rem;
-}
-.post-workShow .sectionFooter .footerBottom .communicate .liked-icon .icon-like-btn {
-  background: url(/images/like.png) no-repeat 0 center;
-  background-size: 100%;
-}
-.post-workShow .sectionFooter .footerBottom .communicate .comment-btn {
-  float: left;
-  cursor: pointer;
-}
-.post-workShow .sectionFooter .footerBottom .communicate .comment-btn .icon-comment-btn {
-  float: left;
-  margin-left: 2.30rem;
-  width: 1.11rem;
-  height: 1.51rem;
-  background: url(/images/icon-comment-deepCol.png) no-repeat 0 center;
-  background-size: 100%;
-}
-.post-workShow .sectionFooter .footerBottom .communicate .comment-btn .text-comment-btn {
-  float: left;
-  font-size: 0.86rem;
-  color: #656565;
-  margin-left: .5rem;
 }
 .artWorkShow {
   /*border-bottom: 1.43rem solid #F7F7F7;*/
@@ -1671,22 +1673,26 @@ body {
   box-sizing: border-box;
   padding: 0.64rem 0.64rem 0 0.75rem;
   border-radius: 0.18rem;
+  line-height: 0.8rem;
   overflow: hidden;
 }
 .main-ask-section .ask-section .ask-section-bottom .help {
   float: left;
 }
 .main-ask-section .ask-section .ask-section-bottom .help .icon-help {
-  float: left;
+  display: inline-block;
   margin-right: 0.68rem;
+  vertical-align: middle;
   width: 0.93rem;
   height: 0.89rem;
   background: url(/images/icon-help.png) no-repeat 0 0;
   background-size: 100%;
 }
 .main-ask-section .ask-section .ask-section-bottom .help .text-help {
-  float: left;
+  display: inline-block;
+  vertical-align: middle;
   font-size: 0.71rem;
+  line-height: 0.89rem;
   color: rgba(0, 0, 0, 0.49);
 }
 .main-ask-section .ask-section .ask-section-bottom .work {
