--- a/public/services/src/app/views/upload/ask/ask.html
+++ b/public/services/src/app/views/upload/ask/ask.html
@@ -20,5 +20,5 @@
 			<div class="thumb"></div>
 		</div>
 	</div> -->
-	<textarea autofocus="autofocus" class="uploadDesc" placeholder="请输入至少10字说明求P"></textarea>
+	<textarea autofocus="autofocus" class="uploadDesc" placeholder="请输入至少10字描述图片或求P的效果"></textarea>
 </div>
