--- a/public/services/src/app/views/ask/detail/detail.html
+++ b/public/services/src/app/views/ask/detail/detail.html
@@ -14,7 +14,7 @@
 	</div>
 	<% }) %>
 	<div class="sectionFooter" id="askSectionFooter">
-		<a href="/services/download/index" class="workDesc"><%= ask.desc %></a>
+		<a class="workDesc"><%= ask.desc %></a>
 		<div class="footerBottom clearfix">
 			<span class="share">
 			</span>
@@ -41,7 +41,7 @@
 				<span class="userNameGroup">
 					<span class="userName-reply"><%= comment.nickname %></span>
 					<em>回复</em>
-					<span class="userName-beReplied"><%= at_comment.nickname %>:</span>
+					<span class="userName-beReplied"><%= at_comment.nickname %>：</span>
 				</span>
 				<div class="commentOption">
 					<span class="optionItem reply">回复</span>
@@ -54,7 +54,7 @@
 			<% } else { %> 
 		<div class="commentLine">
 			<div class="commentHead clearfix">
-				<span class="userName userName-reply"><%= comment.nickname %></span>
+				<span class="userName userName-reply"><%= comment.nickname %>：</span>
 				<div class="commentOption">
 					<span class="optionItem reply">回复</span>
 					<!-- <span class="optionItem delete">删除</span> -->
@@ -93,7 +93,7 @@
 		<img src="<%= replies.image_url %>" alt="原图">
 	</div>
 	<div class="sectionFooter" id="replySectionFooter<%= replies.reply_id %>">
-		<a href="/services/download/index" class="workDesc"><%= replies.desc %></a>
+		<a class="workDesc"><%= replies.desc %></a>
 		<div class="footerBottom clearfix">
 			<span class="share">
 			</span>
@@ -120,7 +120,7 @@
 				<span class="userNameGroup">
 					<span class="userName-reply"><%= comment.nickname %></span>
 					<em>回复</em>
-					<span class="userName-beReplied"><%= at_comment.nickname %>:</span>
+					<span class="userName-beReplied"><%= at_comment.nickname %>：</span>
 				</span>
 				<div class="commentOption">
 					<span class="optionItem reply">回复</span>
@@ -134,7 +134,7 @@
 		<% } else { %> 
 		<div class="commentLine">
 			<div class="commentHead clearfix">
-				<span class="userName userName-reply"><%= comment.nickname %></span>
+				<span class="userName userName-reply"><%= comment.nickname %>：</span>
 				<div class="commentOption">
 					<span class="optionItem reply">回复</span>
 					<!-- <span class="optionItem delete">删除</span> -->
@@ -158,6 +158,7 @@
 		帮P
 	</div>
 	<a href="#upload/reply/<%= ask.ask_id %>" class="footerUpload">
+		<i class="icon-help"></i>
 		上传作品
 	</a>
 </div>
