--- a/public/services/src/app/views/detail/detail.html
+++ b/public/services/src/app/views/detail/detail.html
@@ -54,7 +54,7 @@
 				<span class="userNameGroup">
 					<span class="userName-reply"><%= comment.nickname %></span>
 					<em>回复</em>
-					<span class="userName-beReplied"><%= at_comment.nickname %>:</span>
+					<span class="userName-beReplied"><%= at_comment.nickname %>：</span>
 				</span>
 				<div class="commentOption">
 					<span class="optionItem reply">回复</span>
@@ -68,7 +68,7 @@
 		<% } else { %> 
 		<div class="commentLine">
 			<div class="commentHead clearfix">
-				<span class="userName userName-reply"><%= comment.nickname %></span>
+				<span class="userName userName-reply"><%= comment.nickname %>：</span>
 				<div class="commentOption">
 					<span class="optionItem reply">回复</span>
 					<!-- <span class="optionItem delete">删除</span> -->
