--- a/public/services/src/app/views/hot/reply/reply.html
+++ b/public/services/src/app/views/hot/reply/reply.html
@@ -18,8 +18,8 @@
 			<div class="div-line"></div>
 		</div>
 	</a>
-	<span class="workDesc">描述描述描述</span>
-	<div class="workSectionFooter clearfix">
+	<a href="#detail/detail/<%= type %>/<%= reply_id %>" class="workDesc">描述描述描述</a>
+	<a href="#detail/detail/<%= type %>/<%= reply_id %>" class="workSectionFooter clearfix">
 		<div class="footerWrapper">
 			<div class="like">
 				<i class="icon-like"></i>
@@ -30,6 +30,6 @@
 				<span class="text-comment"><%= comment_count %></span>
 			</div>
 		</div>
-	</div>
+	</a>
 </div>
 
