--- a/public/services/src/app/views/hot/reply/reply.less
+++ b/public/services/src/app/views/hot/reply/reply.less
@@ -96,21 +96,22 @@
                 background-color: #fff;
             }
             .workSectionFooter{
+                display: block;
                 background-color: #fff;
                 .footerWrapper{
                     float: right;
                     padding: 0.5rem 0;
+                    line-height: 1rem;
                     .like{
                         float: left;
-                        line-height: 0.89rem;
                         margin-left: 0.93rem;
                         cursor: pointer;
                         .icon-like{
                             display: block;
                             float: left;
-                            width: 0.86rem;
-                            height: 0.89rem;
-                            background: url(/images/icon-like.png) no-repeat 0 0;
+                            width: 1.2rem;
+                            height: 1rem;
+                            background: url(/images/icon-like-deepCol.png) no-repeat 0 0;
                             background-size: 100%;
                         }
                         .icon-pressed-like {
@@ -120,7 +121,6 @@
                         .text-like{
                             display: block;
                             float: left;
-                            height: 0.89rem;
                             margin-left: 0.21rem;
                             font-size: 0.71rem;
                             font-family: "Helvetica-Light","sans-serif";
@@ -130,21 +130,19 @@
                     }
                     .comment{
                         float: left;
-                        line-height: 0.89rem;
                         margin-left: 0.93rem;
                         cursor: pointer;
                         .icon-comment{
                             display: block;
                             float: left;
-                            width: 1rem;
-                            height: 0.89rem;
+                            width: 0.97rem;
+                            height: 1rem;
                             background: url(/images/icon-comment.png) no-repeat 0 0;
                             background-size: 100%;
                         }
                         .text-comment{
                             display: block;
                             float: left;
-                            height: 0.89rem;
                             margin-left: 0.21rem;
                             margin-right: 0.25rem;
                             font-size: 0.71rem;
