--- a/public/services/src/app/views/menu/menu.html
+++ b/public/services/src/app/views/menu/menu.html
@@ -11,7 +11,7 @@
 		<div class="menuBg"></div>
 		<i class="icon-top"></i>
 	</li>
-	<li class="menuPs">
+	<li class="menuPs hide">
 		<!-- <div class="menuBg"></div> -->
 		<i class="icon-My"></i>
 		<!-- <i class="icon-Ps"></i> -->
