--- a/public/services/src/app/views/ask/detail/ask-detail.less
+++ b/public/services/src/app/views/ask/detail/ask-detail.less
@@ -128,8 +128,8 @@
 			display: inline-block;
 			vertical-align: middle;
 			margin-right: 0.3rem;
-			width: 1.35rem;
-			height: 1.35rem;
+			width: 1.25rem;
+			height: 1.25rem;
 			background: url(/images/icon-help.png) no-repeat 0 0;
 			background-size: 100%;
 		}
@@ -140,6 +140,15 @@
 		height: 3.14rem;
 		background-color: #151515;
 		color: #fff;
+		.icon-help{
+			display: inline-block;
+			vertical-align: middle;
+			margin-right: 0.5rem;
+			width: 1rem;
+			height: 1.4rem;
+			background: url(/images/shang.png) no-repeat 0 0;
+			background-size: 100%;
+		}
 	}
 }
 .window-fix{
