--- a/public/services/src/app/views/menu/menu.less
+++ b/public/services/src/app/views/menu/menu.less
@@ -38,7 +38,7 @@
 .menu{
     position: fixed;
     bottom: 7%;/*to be modified*/
-    right: 4%;
+    right: 2%;
     z-index: 980;
     .menuPs{
 /*        position: relative;
@@ -50,9 +50,9 @@
         width: 3.29rem;
         height: 3.29rem;
         margin-top: 0.93rem;
-        border: 0.08rem solid rgba(255,255,255,0.9);
+        /*border: 0.08rem solid rgba(255,255,255,0.9);*/
         border-radius: 100%;
-        box-shadow: 0px 0.14rem 0.36rem 0px rgba(0,0,0,0.4);
+        /*box-shadow: 0px 0.14rem 0.36rem 0px rgba(0,0,0,0.4);*/
         background-color: #000;
         .menuBg{
             width: 100%;
