--- a/public/services/src/app/views/personal/work/work.html
+++ b/public/services/src/app/views/personal/work/work.html
@@ -1,16 +1,16 @@
-<div class="ask-section">
-	<a href="#ask/detail/<%= ask_id %>" class="ask-section-main">
+<a href="#ask/detail/<%= ask_id %>" class="ask-section">
+	<div  class="ask-section-main">
 		<img src="<%= ask_image_url %>" alt="作品" class="workPic">
 		<span class="desc"><%= desc %></span>
-	</a>
+	</div>
 	<div class="ask-section-bottom clearfix">
 		<div class="help">
 			<i class="icon-help"></i>
-			<span class="text-help">帮P<%= count_download_user %></span>
+			<span class="text-help"><%= count_download_user %>人帮P</span>
 		</div>
 		<div class="work">
 			<i class="icon-work"></i>
-			<span class="text-work">作品<%= reply_count %></span>
+			<span class="text-work"><%= reply_count %>个作品</span>
 		</div>
 	</div>
-</div>
+</a>
