--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1729,7 +1729,7 @@ body {
   width: 100%;
   height: 3.93rem;
   line-height: 3.93rem;
-  border-bottom: 0.04rem solid #EDEDED;
+  border-bottom: 1px solid #EDEDED;
   font-size: 0;
 }
 .uploadHeader .backPage {
@@ -1815,7 +1815,7 @@ body {
   width: 100%;
   position: relative;
   box-sizing: border-box;
-  border-bottom: 0.04rem solid #F0F0F0;
+  border-bottom: 1px solid #F0F0F0;
   height: 6.07rem;
   line-height: 6.07rem;
   padding-top: 1.07rem;
@@ -1893,7 +1893,7 @@ body {
 .uploadContent .uploadPic {
   width: 100%;
   box-sizing: border-box;
-  border-bottom: 0.04rem solid #F0F0F0;
+  border-bottom: 1px solid #F0F0F0;
   height: 6.07rem;
   line-height: 6.07rem;
 }
