--- a/public/services/src/app/views/upload/reply/upload-reply.less
+++ b/public/services/src/app/views/upload/reply/upload-reply.less
@@ -2,7 +2,7 @@
 	width: 100%;
 	height: 3.93rem;
 	line-height: 3.93rem;
-	border-bottom:0.04rem solid #EDEDED;
+	border-bottom: 1px solid #EDEDED;
 	font-size: 0;
 	.backPage{
 		float: left;
@@ -87,7 +87,7 @@
 		width: 100%;
 		position: relative;
 		box-sizing:border-box;
-		border-bottom: 0.04rem solid #F0F0F0;
+		border-bottom: 1px solid #F0F0F0;
 		height: 6.07rem;
 		line-height: 6.07rem;
 		padding-top: 1.07rem;
@@ -165,7 +165,7 @@
 	.uploadPic{
 		width: 100%;
 		box-sizing:border-box;
-		border-bottom: 0.04rem solid #F0F0F0;
+		border-bottom: 1px solid #F0F0F0;
 		height: 6.07rem;
 		line-height: 6.07rem;
 		.uploadThumb{
