--- a/public/services/src/app/views/ask/index/ask-index.less
+++ b/public/services/src/app/views/ask/index/ask-index.less
@@ -41,6 +41,8 @@
                 }
             }
             .workPic{
+                overflow: hidden;
+                max-height: 30rem;
                 display: block;
                 font-size: 0;
                 width: 100%;
