--- a/public/services/src/app/views/ask/detail/ask-detail.less
+++ b/public/services/src/app/views/ask/detail/ask-detail.less
@@ -163,7 +163,7 @@
 		position: absolute;
 		top: 50%;
 		left: 50%;
-		transform: translate(-50%,-50%);
+		margin: -7.88rem 0 0 -12.14rem;
 		width: 24.29rem;
 		height: 15.57rem;
 		background-color: #fff;
