--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1007,7 +1007,7 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  margin: -7.88rem 0 0 -12.14rem;
   width: 24.29rem;
   height: 15.57rem;
   background-color: #fff;
@@ -1134,6 +1134,8 @@ body {
   color: #000;
 }
 .index-ask-pageSection .workSection .workPic {
+  overflow: hidden;
+  max-height: 30rem;
   display: block;
   font-size: 0;
   width: 100%;
@@ -1372,10 +1374,41 @@ body {
   opacity: 0.3;
 }
 
+.empty-page {
+  padding: 3.64rem 0 2rem;
+  background-color: #f7f7f7;
+  text-align: center;
+}
+.empty-page .empty-logo {
+  display: block;
+  overflow: hidden;
+  width: 2.89rem;
+  height: 2.89rem;
+  border-radius: 50%;
+  margin: 0 auto 0.64rem;
+}
+.empty-page .empty-p {
+  text-align: center;
+  font-size: 0.93rem;
+  color: rgba(0, 0, 0, 0.3);
+  line-height: 1.2rem;
+  margin-bottom: 1.25rem;
+}
+.empty-page .empty-buttom {
+  display: inline-block;
+  padding: 0 1.5rem;
+  font-size: 0.86rem;
+  line-height: 1.72rem;
+  color: #000;
+  background-color: #ffed4f;
+  border-radius: 3.57rem;
+}
+
 .header-logo {
   width: 100%;
   height: 3.57rem;
   background-color: #fff;
+  /*border-bottom: 0.71rem solid #f7f7f7;*/
 }
 .header-portrait {
   margin-top: -0.71rem;
@@ -1416,6 +1449,7 @@ body {
   height: 2.71rem;
   background-color: #fff;
   text-align: center;
+  border-bottom: 0.71rem solid #f7f7f7;
 }
 .header-nav .nav-item {
   display: inline-block;
@@ -1441,14 +1475,14 @@ body {
   width: 100%;
   background-color: #f7f7f7;
   box-sizing: border-box;
-  padding-top: 3%;
+  padding-bottom: 3%;
 }
 .main-processing .processing-block {
   overflow: hidden;
   height: 8.93rem;
   width: 94%;
   margin: 0 auto;
-  margin-bottom: 0.71rem;
+  /*margin-bottom: 0.71rem;*/
   background-color: #fff;
 }
 .main-processing .processing-block .pic {
@@ -1598,9 +1632,9 @@ body {
 .myWork-pageSection .workSection .workSectionFooter .footerWrapper .like .icon-like {
   display: block;
   float: left;
-  width: 0.86rem;
-  height: 0.89rem;
-  background: url(/images/icon-like.png) no-repeat 0 0;
+  width: 1.1rem;
+  height: 1rem;
+  background: url(/images/icon-like-deepCol.png) no-repeat 0 0;
   background-size: 100%;
 }
 .myWork-pageSection .workSection .workSectionFooter .footerWrapper .like .icon-pressed-like {
@@ -1648,7 +1682,7 @@ body {
 }
 .main-ask-section {
   width: 47%;
-  margin: 1.5%;
+  margin: 0 1.5% 3%;
 }
 .main-ask-section .ask-section {
   float: left;
