--- a/public/services/src/app/views/personal/header/header.less
+++ b/public/services/src/app/views/personal/header/header.less
@@ -2,6 +2,7 @@
     width: 100%;
     height: 3.57rem;
     background-color: #fff;
+    /*border-bottom: 0.71rem solid #f7f7f7;*/
 }
 .header-portrait{
     margin-top: -0.71rem;
@@ -42,6 +43,7 @@
     height: 2.71rem;
     background-color: #fff;
     text-align: center;
+    border-bottom: 0.71rem solid #f7f7f7;
     .nav-item{
         display: inline-block;
         width: 33.3%;
