--- a/public/services/src/app/views/personal/processing/processing.less
+++ b/public/services/src/app/views/personal/processing/processing.less
@@ -2,13 +2,13 @@
     width: 100%;
     background-color: #f7f7f7;
     box-sizing:border-box;
-    padding-top: 3%;
+    padding-bottom: 3%;
     .processing-block{
         overflow: hidden;
         height: 8.93rem;
         width: 94%;
         margin: 0 auto;
-        margin-bottom: 0.71rem;
+        /*margin-bottom: 0.71rem;*/
         background-color: #fff;
         .pic{
             float: left;
