--- a/public/services/src/app/views/personal/reply/personal-reply.less
+++ b/public/services/src/app/views/personal/reply/personal-reply.less
@@ -22,9 +22,9 @@
                         .icon-like{
                             display: block;
                             float: left;
-                            width: 0.86rem;
-                            height: 0.89rem;
-                            background: url(/images/icon-like.png) no-repeat 0 0;
+                            width: 1.1rem;
+                            height: 1rem;
+                            background: url(/images/icon-like-deepCol.png) no-repeat 0 0;
                             background-size: 100%;
                         }
                         .icon-pressed-like {
