--- a/public/services/src/app/views/personal/work/personal-work.less
+++ b/public/services/src/app/views/personal/work/personal-work.less
@@ -3,7 +3,7 @@
 }
     .main-ask-section{
         width: 47%;
-        margin: 1.5%;
+        margin: 0 1.5% 3%;
         .ask-section{
             float: left;
             width: 100%;
