--- a/public/services/src/app/views/personal/work/personal-work.less
+++ b/public/services/src/app/views/personal/work/personal-work.less
@@ -13,9 +13,13 @@
             .ask-section-main{
                 display: block;
                 .workPic{
-                    display: block;
-                    width: 100%;
+                    overflow: hidden;
+                    max-height: 30rem;
                     margin-bottom: 0.71rem;
+                    img {
+                        display: block;
+                        width: 100%;
+                    }
                 }
                 .desc{
                     overflow: hidden;
