--- a/public/services/src/app/views/personal/work/work.html
+++ b/public/services/src/app/views/personal/work/work.html
@@ -1,6 +1,8 @@
 <a href="#ask/detail/<%= ask_id %>" class="ask-section">
 	<div  class="ask-section-main">
-		<img src="<%= ask_image_url %>" alt="作品" class="workPic">
+		<div class="workPic">
+			<img src="<%= ask_image_url %>" alt="作品">
+		</div>
 		<span class="desc"><%= desc %></span>
 	</div>
 	<div class="ask-section-bottom clearfix">
