--- a/public/services/src/app/views/hot/reply/reply.less
+++ b/public/services/src/app/views/hot/reply/reply.less
@@ -33,10 +33,12 @@
                 }
             }
             .workPic{
+                overflow: hidden;
                 position: relative;
                 display: block;
-                font-size: 0;
                 width: 100%;
+                max-height: 30rem;
+                font-size: 0;
                 img{
                     width: 100%;
                 }
