--- a/public/services/src/app/views/ask/detail/ask-detail.less
+++ b/public/services/src/app/views/ask/detail/ask-detail.less
@@ -22,7 +22,7 @@
 		font-size: 0.86rem;
 		opacity: 0.8;
 		em{
-			vertical-align: top;
+			vertical-align: middle;
 			font-size: 1.07rem;
 		}
 	}
