--- a/public/services/src/app/views/ask/detail/ask-detail.less
+++ b/public/services/src/app/views/ask/detail/ask-detail.less
@@ -16,14 +16,17 @@
 		background-color: #F7F7F7;
 	}
 	.text-workCount{
-		vertical-align: top;
 		color: #000;
-		font-family: "PingFangSC-Regular","sans-serif";
 		font-size: 0.86rem;
 		opacity: 0.8;
+		line-height: 1rem;
+		height: 1rem;
 		em{
-			vertical-align: middle;
+			display: inline-block;
+			line-height: 1rem;
+			height: 1rem;	
 			font-size: 1.07rem;
+			margin: 0 .3rem;
 		}
 	}
 }
