--- a/public/services/src/app/views/menu/menu.less
+++ b/public/services/src/app/views/menu/menu.less
@@ -37,7 +37,7 @@
 }
 .menu{
     position: fixed;
-    bottom: 7%;/*to be modified*/
+    bottom: 8%;/*to be modified*/
     right: 2%;
     z-index: 980;
     .menuPs{
@@ -58,9 +58,9 @@
             width: 100%;
             height: 100%;
             opacity: 0.89;
-            border: 0.08rem solid rgba(255,255,255,0.9);
+            /*border: 0.08rem solid rgba(255,255,255,0.9);*/
             border-radius: 100%;
-            box-shadow: 0px 0.14rem 0.36rem 0px rgba(0,0,0,0.4);
+            /*box-shadow: 0px 0.14rem 0.36rem 0px rgba(0,0,0,0.4);*/
             background-color: #000;
         }
         .icon-My{
@@ -197,9 +197,9 @@
             width: 100%;
             height: 100%;
             opacity: 0.89;
-            border: 0.08rem solid rgba(255,255,255,0.9);
+            /*border: 0.08rem solid rgba(255,255,255,0.9);*/
             border-radius: 100%;
-            box-shadow: 0px 0.14rem 0.36rem 0px rgba(0,0,0,0.4);
+            /*box-shadow: 0px 0.14rem 0.36rem 0px rgba(0,0,0,0.4);*/
             background-color: #000;
         }
         .icon-top{
